# flowers

./: .env.example  .gitignore  Caddyfile  HANDOFF.md  docker-compose.yml
.claude/: settings.local.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/alembic/versions/: 0001_initial.py  0002_customers_and_bonuses.py  0003_payment_methods_eur.py  0004_remove_old_payment_methods.py
backend/app/api/: auth.py  customers.py  payment_methods.py  reports.py  shifts.py  stores.py  transactions.py  users.py
backend/app/core/: audit.py  config.py  deps.py  security.py
backend/app/db/: base.py  models.py
backend/app/schemas/: auth.py  customers.py  payment_methods.py  reports.py  shifts.py  stores.py  transactions.py  users.py
backend/app/scripts/: create_owner.py
backend/app/services/: export.py  reports.py  shifts.py
backend/tests/: conftest.py  test_bonuses.py  test_reports.py
frontend/: index.html  nginx.conf  package.json  vite.config.ts
frontend/public/icons/: README.txt
frontend/src/: App.tsx  index.css  router.tsx
frontend/src/features/auth/: LoginPage.tsx
frontend/src/features/cashier/: AddSalePage.tsx  CashMovementPage.tsx  CashierHome.tsx  CloseShiftPage.tsx  DepositPage.tsx  Numpad.tsx  WithdrawalPage.tsx
frontend/src/features/home/: HomePage.tsx
frontend/src/features/owner/: CustomersPage.tsx  DateRangePicker.tsx  NetworkReportPage.tsx  OwnerPanel.tsx  StoreReportPage.tsx  StoresPage.tsx  (+1 more)
frontend/src/lib/: api.ts  auth.tsx  reports.ts  types.ts
scripts/: backup-db.sh  deploy.sh
